<resources>
    <string name="app_name">Profile MU</string>
    <string name="sp1">Profile MU</string>
    <string name="sp2">My Profile Is My Life</string>
    <string name="w1a">HOME</string>
    <string name="w1b">Menampilkan Deskripsi Tentang Saya</string>
    <string name="w2a">Daily Activity</string>
    <string name="w2b">Menampilkan Aktivitas Sehari-hari Saya</string>
    <string name="w3a">Media</string>
    <string name="w3b">Menampilkan Gallery, Music, dan Video</string>
    <string name="menu_home">Home</string>
    <string name="menu_daily">Activity</string>
    <string name="menu_media">Media</string>
    <string name="menu_profile">Profile</string>
    <string name="nama">M Nizar Miftahul Ulya</string>
    <string name="unikom">UNIKOM</string>
    <string name="umur">20 Tahun</string>
    <string name="gender">Pria</string>
    <string name="alamat">Bandung</string>
    <string name="tentang1">Saya Kuliah Di UNIKOM Jurusan Teknik</string>
    <string name="tentang2">Informatika Semester 6</string>
    <string name="interest">Interest</string>
    <string name="hobby">Hobby</string>
    <string name="hobi">Play Games</string>
    <string name="makes">Makes</string>
    <string name="makes1">Hamburger</string>
    <string name="mikes">Mikes</string>
    <string name="mikes1">Milkshake</string>
    <string name="movie">Movie</string>
    <string name="ambition">Ambition</string>
    <string name="ambition1">Businessman</string>
    <string name="daily1">Daily Activity</string>
    <string name="friend">Friend List</string>
    <string name="gallery">Gallery</string>
    <string name="musik">Music Favorite</string>
    <string name="video">Video</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="time">07.00</string>
    <string name="age">Umur</string>
    <string name="agama">Agama</string>
    <string name="agama1">Islam</string>
    <string name="kota">Kota</string>
    <string name="about">About</string>
    <string name="about1">Profil MU adalah aplikasi yang berisi tentang Profile Saya. Aplikasi ini masih sederhana dan masih versi 1.0</string>
    <string name="judul">Judul</string>
    <string name="artist">Artist</string>
    <string name="nomer">#1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
