<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MediaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ga400"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/startrack"
                android:text="@string/menu_media"
                android:textColor="@color/ga400"
                android:textStyle="bold"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDetailGallery"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/txt_hobby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/beeleave"
                        android:text="@string/gallery"
                        android:textColor="@color/ga400" />

                    <ImageView
                        android:id="@+id/img_hobby"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_below="@id/txt_hobby"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/gallery2" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDetailMusic"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/txt_makes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/beeleave"
                        android:text="@string/musik"
                        android:textColor="@color/ga400" />

                    <ImageView
                        android:id="@+id/img_makes"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_below="@id/txt_makes"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/music" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDetailVideo"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/txt_mikes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/beeleave"
                        android:text="@string/video"
                        android:textColor="@color/ga400" />

                    <ImageView
                        android:id="@+id/img_mikes"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_below="@id/txt_mikes"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/video" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>